# gargoyle

./: Cargo.toml  foobar.txt
benches/: example.rs
src/: lib.rs  main.rs
src/tws/: client.rs  codec.rs  easy_client.rs  messages.rs  mod.rs  sample.txt  serde.rs
src/tws/serde/: custom_chrono.rs  de.rs  error.rs  mod.rs  ser.rs
