[package]
name = "gargoyle"
version = "0.1.0"
authors = ["Simon Rasmussen <zetlon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "gargoyle"
path = "src/lib.rs"


[[bin]]
name= "gargoyle_bin"
path = "src/main.rs"

[[bench]]
name = "example"
harness = false

[dependencies]
twsapi = "0.1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version ="0.6.3", features = ["codec"] }
async-stream = "0.3.0"
bytes = { version = "1", features = ["serde"] }
bytestring = { version = "1", features = ["serde"] }
futures = "0.3.12"
ascii = "1.0.0"
chrono = { version = "0.4", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
bitflags = "1.2.1"
rillrate = "0.24"
ryu = "1.0"
itoa = "0.4"
simdutf8 = "0.1.1"
fixed = {version="1.8.0", features = ["serde", "serde-str"]}
fixed-macro = "1.1.1"
memchr = "2.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dev-dependencies]
criterion = "0.3"

[profile.bench.build-override]
debug = true